--- a/cv.tex
+++ b/cv.tex
@@ -57,11 +57,10 @@ I-308, IIT Kanpur {\large\textperiodcentered} Kanpur {\large\textperiodcentered}
 % HEADER SECTION
 %----------------------------------------------------------------------------------------
 
-{\addfontfeature{LetterSpace=20.0}\fontsize{36}{36}\selectfont\scshape Srijan R. Shetty} %Your name at the top
-\\ \\
-{Senior Undergraduate \\%
-Department of Computer Science and Engineering \\%
-Indian Institute of Technology, Kanpur}
+{\centering
+    {\addfontfeature{LetterSpace=20.0}\fontsize{36}{36}\selectfont\scshape
+    Srijan R. Shetty}\\
+}
 
 %----------------------------------------------------------------------------------------
 %   INTERESTS
@@ -81,32 +80,15 @@ Networks
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering},\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
                      & \normalsize \textsc{Gpa}: 9.6/10.0 \\
-                     & \textbf{Relevant Courses}: \\
-                     & Computer Organization (CS220) \\
-                    & Operating Systems (CS330) \\
-                    & Compilers (CS335) \\
-                    & Computer Networks (CS425) \\
-                    & Theory of Computation (CS3) \\
-                    & Computing Laboratory (CS251 \& CS252)\\
-                    & Discreet Mathematics (CS201)\\
-                    & Logic for Computer Science (CS202A)\\
-                    & Data Structure and Algorithms (CS210)\\
-                    & Design and Analysis of Algorithms (CS345)\\
-                    & Principles of Programming Languages (CS350)\\
-                    & Computer and Internet Security (CS628)\\
-                    & Artificial Intelligence (CS365)\\
-                    & Abstract Algebra (CS202B)\\
-                    & Linear Algebra (MTH102)\\
-                    & Computational Methods in Engineering (ESO208A)\\
-                    & Multivariate Calculus (MTH101)\\
-                    & Technical Communication(CS300)\\
                      \\
 
-    \textsc{July} 2011 & \textsc{CBSE} Board, \normalsize\textbf{The Emerald Heights International School}, Indore\\
-                       &\normalsize \textsc{Percentage}: 91.4 \\
+    \textsc{July} 2011 & 12th Board, \textsc{CBSE} Board, \\
+                       & \normalsize\textbf{The Emerald Heights International School}, Indore\\
+                       & \normalsize \textsc{Percentage}: 91.4 \\
                        \\
 
-    \textsc{July} 2011 & \textsc{ICSE} Board,  \normalsize\textbf{The Laurels School International}, Indore \\
+    \textsc{July} 2011 & 10th Board, \textsc{ICSE} Board,  \\
+                       & \normalsize\textbf{The Laurels School International}, Indore \\
                        & \normalsize \textsc{Percentage}: 95.4 \\
                        \\
 
@@ -133,12 +115,35 @@ Networks
 
 \begin{tabular}{r|p{11cm}}
     \textsc{May-Jul 2014} & Research Intern at \textsc{Microsoft Research India}, Bangalore\emph{}\\
-        & \footnotesize{Worked on Distibuted Systems} \\
+                          & \footnotesize{The major objective of this project was to optimize
+                            \textbf{CScale for concurrency}. CScale provides a declarative programming model
+                            using LINQ, it does all the heavy lifting of scaling distributed systems and
+                            failure. The project also involved \textbf{failure testing and performance testing}
+                            of the concurrency optimizations in real world scenarios.}\\
+                            \\
 
     \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks}, Bangalore\emph{}\\
-        & \footnotesize{Used bleeding edge web technologies \textbf{HTML5, javascript, CSS3, Flash and XMPP} to develop a
-            \textbf{technology-agnostic video player and real time communication/interaction services.}
-            for the company's MOOC Service \textbf{CourseHub}}
+                          & \footnotesize{Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
+                            \textbf{Flash} based online media player of \textbf{CourseHub} - Aurus'
+                            propriety MOOC offering. A new \textbf{XMPP} chat service for group chat
+                            was also created and integrated with CourseHub.}\\
+
+\end{tabular}
+
+%----------------------------------------------------------------------------------------
+%   SKILL SET
+%----------------------------------------------------------------------------------------
+\section{Skill Set}
+
+\begin{tabular}{rl}
+
+    \textsc{Programming Languages}: %
+            & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
+    \textsc{Web Development}: %
+            & \textbf{HTML5}, \textbf{CSS}, \textbf{JavaScript}, \textbf{Flash}, \textbf{SQL}\\
+    \textsc{Tools}: %
+            & \textbf{Git}, \textbf{Shell Scripting}, \textbf{Prezi}, \textbf{Vim}, \textbf{LaTeX}\\
+\\
 
 \end{tabular}
 
@@ -150,69 +155,77 @@ Networks
 \begin{tabular}{r|p{11cm}}
 
     \textsc{Spring 2014} & JavaScript to MIPS Compiler, \textsc{\raggedright Compilers} \\
-        & \footnotesize{An end to end compiler for a version of ECMAScript5.1 with static type hinting,
-            first class functions, and runtime support was implemented in Python which compiled to MIPS
-            architecture.}\\
-            \\
+                         & \footnotesize{An end-to-end compiler for a subset of ECMAScript5.1
+                            which compiled to MIPS was implemented in Python. No runtime support
+                            was provided ergo, static types and type annotations were used instead.
+                            The project was undertaken in the aegis of \textbf{Professor Subhajit Roy}.
+                            \href{https://github.com/srijanshetty/javascript-compiler} {Git Repo}} \\
+                            \\
 
     \textsc{Spring 2014} & Hindi author attribution, \textsc{\raggedright Artificial Intelligence} \\
-        & \footnotesize{The first half of this project was a multi-class clustering problem, wherein authors were to be clustered
-            according to their writing style. The features used for the same were, word frequency counts and collocation frequencies.
-            The second half of the project was to classify the text snippets into different authors using supervised learning techniques.
-            The project was supervised by \textbf{Professor Amitabha Mukherjee} and was inherently difficult due to the unavailability
-            of stemmers and POS taggers for Hindi.} \\
-            \\
+                         & \footnotesize{The first half of this project was a multi-class clustering problem,
+                            wherein authors were to be clustered according to their writing style.
+                            The features used for the same were, word frequency counts and collocation
+                            frequencies.  The second half of the project was to classify the text snippets
+                            into different authors using supervised learning techniques.
+                            The project was supervised by \textbf{Professor Amitabha Mukherjee} and was
+                            inherently difficult due to the unavailability of stemmers and POS taggers for Hindi.
+                            \href{https://github.com/srijanshetty/author-attribution} {Git Repo}}\\
+                            \\
 
     \textsc{Fall 2013} & NachOS, \textsc{Operating Systems} \\
-        & \footnotesize{In the three phases of this project undertaken in the aegis of \textbf{Professor Mainak Chaudhuri},
-            three different areas of an Operating System were explored.
-            The first phase involved implementation of system calls; the second was process management and process scheduling;
-            and the last was different memory management schemes and page replacement algorithms }\\
-            \\
+                       & \footnotesize{The coursework included implementation of system calls; process
+                          management and scheduling; memory management schemes and page replacement
+                          algorithms in \textbf{NachOS}. \textbf{Professor Mainak Chaudhuri}, was
+                          the professor-in-charge}\\
+                          \\
 
-    \textsc{Fall 2013} & Peer to Peer File transfer, \textsc{Computer Networks} \\
-        & \footnotesize{To understand the working of Transport Layer Protocols and socket programming
-            , a peer to peer file transfer architecture,
-            mimicking that of BitTorrent was created in Node.js to allow easy file sharing acorss any Local Area Network.
-            The project was supervised by \textbf{Professor Dheeraj Sanghi}. \href{https://github.com/srijanshetty/nodesock} {Repo}}\\
-            \\
+    \textsc{Fall 2013} & P2P File Sharing and Streaming, \textsc{Computer Networks} \\
+                       & \footnotesize{A Node.js based local file server and media playback server was implemented
+                          to understand the underpinnings of Transport Layer Protocols, socket programming,
+                          and P2P architecuture.  The project was supervised by \textbf{Professor Dheeraj Sanghi}.
+                          \href{https://github.com/srijanshetty/nodesock} {Git Repo}}\\
+                          \\
 
     \textsc{Fall 2013} & IP Spoofing, \textsc{Computer Networks} \\
-       & \footnotesize{Under the guidance of \textbf{Professor Dheeraj Sanghi}, different methodologies of spoofing
-            IP addresses and different uses of spoofing IPs were implemented and tested in a secure environment.}\\
-            \\
-
-    \textsc{Fall 2013} & Erlang Traffic Server, \textsc{Principles of Programming Languages} \\
-       & \footnotesize{A simple traffic Server was implemented in Erlang to grok message passing concurrency and other
-        functional aspects of the language under the guidance of \textbf{Professor P. Kurur}}\\
-            \\
+                       & \footnotesize{Under the guidance of \textbf{Professor Dheeraj Sanghi}, different methodologies
+                          of spoofing IP addresses and different uses of spoofing IPs were implemented and tested
+                          in a secure environment.}\\
+                          \\
 
     \textsc{Fall 2013} & Metro Travel Plan(Prolog), \textsc{Principles of Programming Languages} \\
-       & \footnotesize{To grok the concepts of logic programming, we were tasked to implement a shortest path
-        algorithm on Delhi Metro route using solely logic programming constructs. This project was also supervised by
-        \textbf{Professor P. Kurur}}\\
-            \\
+                       & \footnotesize{Implementation of shortest paths in Prolog on the Delhi Metro route.
+                          The professor-in-chare was \textbf{Professor P. Kurur}}\\
+                          \\
+
+    \textsc{Fall 2013} & Erlang Traffic Server, \textsc{Principles of Programming Languages} \\
+                       & \footnotesize{A simple traffic server implemented in Erlang using message passing
+                          concurrency and tail call recursion functional aspects of the language under the
+                          guidance of \textbf{Professor P. Kurur}}\\
+                          \\
 
     \textsc{Spring 2013} & 8-bit General Purpose Computer on a FPGA, \textsc{Computer Organization} \\
-        & \footnotesize{The GPC had a load-store architecture and was written in System Verilog and implemented on a \textbf{Xilinx Spartan 3 FPGA}.
-            The project was under the supervision of \textbf{Professor Subhajit Roy}.
-            It had a limited, but powerful Instruction Set Architecture which could implement recursive functions, jumps,
-            loops  other basic building blocks of a simple assembly language.
-            \href{https://github.com/srijanshetty/220_y11} {Github Repo}} \\
-            \\
+                         & \footnotesize{The GPC had a load-store architecture and was written in System Verilog and
+                            implemented on a \textbf{Xilinx Spartan 3 FPGA}.  The project was under the
+                            supervision of \textbf{Professor Subhajit Roy}.  It had a limited, but powerful
+                            Instruction Set Architecture which could implement recursive functions, jumps,
+                            loops  other basic building blocks of a simple assembly language.
+                            \href{https://github.com/srijanshetty/220_y11} {Git Repo}} \\
+                            \\
 
-    \textsc{Spring 2013} & Web Crawler, \textsc{Computing Laboratory} \\
-        & \footnotesize{A python based web crawler which could obtain paper submission deadlines of a supplied conference name.
-            BeautifulSoup and urllib along with simple pattern matching through regular expressions were used to implement crawling.
-            \href{https://github.com/srijanshetty/crawler} {Github Repo} } \\
-            \\
+    \textsc{Spring 2013} & Conference Dates Web Crawler, \textsc{Computing Laboratory} \\
+                         & \footnotesize{A python based web crawler which could obtain paper submission
+                            deadlines of a provided conference name.  BeautifulSoup and urllib along
+                            with simple pattern matching through regular expressions were used to implement crawling.
+                            \href{https://github.com/srijanshetty/crawler} {Git Repo} } \\
+                            \\
 
     \textsc{Fall 2011} & "No situation is unique and certain moral principles can be applied across all situation",
-        \textsc{Introduction to Philosophy} \\
-        & \footnotesize{ An argumentative presentation proving that certain moral principles can be applied throughout;
-                by proving different situations have certain fundamental similarity.
-                Albeit this would require a gross simplification of different situations.
-                The reviewing instructor was \textbf{Professor Vineet Sahu}} \\
+                         \textsc{Introduction to Philosophy} \\
+                       & \footnotesize{ An argumentative discourse proving that certain moral principles
+                         can be applied throughout; by proving different situations have a certain
+                         fundamental similarity.  Albeit this would require a gross simplification of
+                         different situations.  The reviewing instructor was \textbf{Professor Vineet Sahu}} \\
 
 \end{tabular}
 
@@ -222,6 +235,37 @@ Networks
 \section{Side Projects}
 
 \begin{tabular}{r|p{11cm}}
+
+    \textsc{July 2014} & OARS\\
+                       & \footnotesize{OARS is a \textbf{AngularJS} based frontend for the courses offered
+                          in IIT Kanpur. The data for the same was obtained by scraping the official data
+                          portal of IIT Kanpur and the backend was created in python \textbf{AngularJS}
+                          \href{https://github.com/navya/oars} {Git Repo} }\\
+                          \\
+
+    \textsc{March 2014} & GYPH\\
+                        & \footnotesize{GYPH or Get Your Personal Homepage
+    is a simple hassle-free homepage designer for students who are not
+    proficient in web technologies. It provides a directly editable
+    interface for editing themes and downloading them for personal use.} \\
+        \\
+
+    \textsc{August 2013} & ShuffleRun\\
+        & \footnotesize{A one day hack for Yahoo HackU. A simple music player
+        created using HTML5, CSS3 and JavaScript which selects a track to play
+        according to the users running speed.
+            \href{https://github.com/srijanshetty/ShuffleRun} {GitHub Repo} }\\
+        \\
+
+    \textsc{July 2013} & Website of Udghosh\\
+        & \footnotesize{Webpage of \textbf{Udghosh}, the annual sports festival of
+        IIT Kanpur. \href{www.udghosh.org} {Webpage} } \\
+        \\
+
+    \textsc{December 2012} & Website of Hall 5, IIT Kanpur\\
+        & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur.
+        \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
+        \\
 
     \textsc{May-July 2012} & Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur\\
         & \footnotesize{Vani is an \textbf{extensible} platform made for the campus community consisting of Wiki, Forums,
@@ -236,18 +280,7 @@ Networks
             \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing} {Documentation} } \\
             \\
 
-    \textsc{July 2013} & Web development\\
-        & \footnotesize{Webpage of \textbf{Udghosh}, the annual sports festival of IIT Kanpur. \href{www.udghosh.org} {Webpage} } \\
-        & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur. \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
-        \\
-
     \textsc{July 2013} & Projects on Github \\
-        & \footnotesize{\textbf{ShuffleRun}: a music player which changes tracks on the basis of running speed of the user
-            \href{https://github.com/srijanshetty/ShuffleRun} {Repo} }\\
-        & \footnotesize{\textbf{GYPH}: a music player which changes tracks on the basis of running speed of the user
-            \href{https://github.com/srijanshetty/ShuffleRun} {Repo} }\\
-        & \footnotesize{\textbf{OARS}: a music player which changes tracks on the basis of running speed of the user
-            \href{https://github.com/srijanshetty/ShuffleRun} {Repo} }\\
         & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems. \href{https://github.com/srijanshetty/dotfiles} {Repo} } \\
         & \footnotesize{\textbf{Prezto}: a fork of the Prezto ZSH framework  \href{https://github.com/srijanshetty/prezto} {Repo}} \\
         & \footnotesize {\textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework \href{https://github.com/srijanshetty/oh-my-zsh} {Repo} } \\
@@ -277,23 +310,6 @@ Networks
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
-%   SKILL SET
-%----------------------------------------------------------------------------------------
-\section{Skill Set}
-
-\begin{tabular}{rl}
-
-\textsc{Programming Languages}: %
-    & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
-    \textsc{Web Development}: %
-    & \textbf{HTML5}, \textbf{CSS}, \textbf{JavaScript}, \textbf{Flash}, \textbf{SQL}\\
-    \textsc{Tools}: %
-    & \textbf{Git}, \textbf{Shell Scripting}, \textbf{Prezi}, \textbf{Vim}, \textbf{LaTeX}\\
-\\
-
-\end{tabular}
-
-%----------------------------------------------------------------------------------------
 %   OTHER SKILLS
 %----------------------------------------------------------------------------------------
 
@@ -302,6 +318,11 @@ Networks
 
     -    & Volunteered to help \textbf{Professor Bhaskar Dasgupta} teach English to underprivileged children from the campus
            and neighbouring village of Nankari.\\
+    -    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}\\
+         & \footnotesize{Navya is the Free and Open Source Software Group at IIT
+           Kanpur which educates the campus community about the FOSS mission and
+           hacks on FOSS applications which would be of use to the students
+           community \href{https://github.com/navya} {Github Repo}} \\
     2014 & \textbf{Head, Major Events and Competitions, Antaragni'14} , the annual cultural festival of
     IIT Kanpur. \\
     2013 & \textbf{Hospitality Coordinator, Antaragni ‘13}\\
@@ -325,4 +346,31 @@ Networks
 
 \end{tabular}
 
+\section{CourseWork}
+
+\begin{tabular}{rl}
+
+    \textsc{Current} & Computer Organization (CS220) \\
+                     & Operating Systems (CS330) \\
+                     & Compilers (CS335) \\
+                     & Computer Networks (CS425) \\
+                     & Theory of Computation (CS3) \\
+                     & Computing Laboratory (CS251 \& CS252)\\
+                     & Discreet Mathematics (CS201)\\
+                     & Logic for Computer Science (CS202A)\\
+                     & Data Structure and Algorithms (CS210)\\
+                     & Design and Analysis of Algorithms (CS345)\\
+                     & Principles of Programming Languages (CS350)\\
+                     & Computer and Internet Security (CS628)\\
+                     & Artificial Intelligence (CS365)\\
+                     & Abstract Algebra (CS202B)\\
+                     & Linear Algebra (MTH102)\\
+                     & Computational Methods in Engineering (ESO208A)\\
+                     & Multivariate Calculus (MTH101)\\
+                     & Technical Communication(CS300)\\
+                     \\
+\end{tabular}
+%----------------------------------------------------------------------------------------
+%  SIDE PROJECTS
+%----------------------------------------------------------------------------------------
 \end{document}
