Updates to side projects

--- a/cv.tex
+++ b/cv.tex
@@ -237,35 +237,38 @@ Networks
 \begin{tabular}{r|p{11cm}}
 
     \textsc{July 2014} & OARS\\
-                       & \footnotesize{OARS is a \textbf{AngularJS} based frontend for the courses offered
-                          in IIT Kanpur. The data for the same was obtained by scraping the official data
-                          portal of IIT Kanpur and the backend was created in python \textbf{AngularJS}
+                       & \footnotesize{OARS is a \textbf{AngularJS} based frontend for the
+                          courses offered in IIT Kanpur. It was created as a
+                          hack to allevate the pain of the students in using the
+                          sluggish leagacy course search. The data was obtained by
+                          scraping the official data portal of IIT Kanpur, and the
+                          project is now maintained by \textbf{Navya}
                           \href{https://github.com/navya/oars} {Git Repo} }\\
                           \\
 
     \textsc{March 2014} & GYPH\\
                         & \footnotesize{GYPH or Get Your Personal Homepage
-    is a simple hassle-free homepage designer for students who are not
-    proficient in web technologies. It provides a directly editable
-    interface for editing themes and downloading them for personal use.} \\
-        \\
+                           is a simple hassle-free homepage designer for students who are not
+                           proficient in web technologies. It provides a WYSIWIG
+                           interface for editing themes and downloading them for personal use.} \\
+                           \\
 
     \textsc{August 2013} & ShuffleRun\\
-        & \footnotesize{A one day hack for Yahoo HackU. A simple music player
-        created using HTML5, CSS3 and JavaScript which selects a track to play
-        according to the users running speed.
-            \href{https://github.com/srijanshetty/ShuffleRun} {GitHub Repo} }\\
-        \\
+                         & \footnotesize{A hack for Yahoo HackU. ShuffleRun is a
+                            web based music player which selects a track from the users library
+                            according to her running speed.
+                            \href{https://github.com/srijanshetty/ShuffleRun} {GitHub Repo} }\\
+                            \\
 
     \textsc{July 2013} & Website of Udghosh\\
-        & \footnotesize{Webpage of \textbf{Udghosh}, the annual sports festival of
-        IIT Kanpur. \href{www.udghosh.org} {Webpage} } \\
-        \\
+                       & \footnotesize{Webpage of \textbf{Udghosh}, the annual sports festival of
+                          IIT Kanpur. \href{www.udghosh.org} {Webpage} } \\
+                          \\
 
     \textsc{December 2012} & Website of Hall 5, IIT Kanpur\\
-        & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur.
-        \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
-        \\
+                           & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur.
+                             \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
+                             \\
 
     \textsc{May-July 2012} & Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur\\
         & \footnotesize{Vani is an \textbf{extensible} platform made for the campus community consisting of Wiki, Forums,
@@ -281,10 +284,14 @@ Networks
             \\
 
     \textsc{July 2013} & Projects on Github \\
-        & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems. \href{https://github.com/srijanshetty/dotfiles} {Repo} } \\
-        & \footnotesize{\textbf{Prezto}: a fork of the Prezto ZSH framework  \href{https://github.com/srijanshetty/prezto} {Repo}} \\
-        & \footnotesize {\textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework \href{https://github.com/srijanshetty/oh-my-zsh} {Repo} } \\
-        & \footnotesize{\textbf{DS}: implementation of certain algorithms and data structures \href{https://github.com/srijanshetty/DS} {Repo}} \\
+                       & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems.
+                          \href{https://github.com/srijanshetty/dotfiles} {Repo} } \\
+                       & \footnotesize{\textbf{Prezto}: a fork of the Prezto ZSH framework
+                          \href{https://github.com/srijanshetty/prezto} {Repo}} \\
+                       & \footnotesize {\textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
+                          \href{https://github.com/srijanshetty/oh-my-zsh} {Repo} } \\
+                       & \footnotesize{\textbf{DS}: implementation of certain algorithms and data structures
+                          \href{https://github.com/srijanshetty/DS} {Repo}} \\
 
 \end{tabular}
 
