New layout for columns in Side Projects

--- a/cv.tex
+++ b/cv.tex
@@ -234,8 +234,7 @@ Networks
 %----------------------------------------------------------------------------------------
 \section{Side Projects}
 
-\begin{tabular}{r|p{11cm}}
-
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{July 2014} & OARS\\
                        & \footnotesize{OARS is a \textbf{AngularJS} based frontend for the
                           courses offered in IIT Kanpur. It was created as a
@@ -244,45 +243,58 @@ Networks
                           scraping the official data portal of IIT Kanpur, and the
                           project is now maintained by \textbf{Navya}
                           \href{https://github.com/navya/oars} {Git Repo} }\\
-                          \\
 
+\end{tabular}
+
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{March 2014} & GYPH\\
                         & \footnotesize{GYPH or Get Your Personal Homepage
                            is a simple hassle-free homepage designer for students who are not
                            proficient in web technologies. It provides a WYSIWIG
-                           interface for editing themes and downloading them for personal use.} \\
-                           \\
+                           interface for editing themes and downloading them for personal use.
+                           \href{http://gyph2.herokuapp.com/} {Website} } \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{August 2013} & ShuffleRun\\
                          & \footnotesize{A hack for Yahoo HackU. ShuffleRun is a
                             web based music player which selects a track from the users library
                             according to her running speed.
                             \href{https://github.com/srijanshetty/ShuffleRun} {GitHub Repo} }\\
-                            \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{July 2013} & Website of Udghosh\\
                        & \footnotesize{Webpage of \textbf{Udghosh}, the annual sports festival of
                           IIT Kanpur. \href{www.udghosh.org} {Webpage} } \\
-                          \\
+\end{tabular}
 
-    \textsc{December 2012} & Website of Hall 5, IIT Kanpur\\
-                           & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur.
-                             \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
-                             \\
+\begin{tabular}{p{2.2cm}|p{11cm}}
+    \textsc{Dec 2012} & Website of Hall 5, IIT Kanpur\\
+                      & \footnotesize{Homepage of \textbf{Hall 5}, IIT Kanpur.
+                         \href{http://www.iitk.ac.in/hall5} {Webpage}. } \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{May-July 2012} & Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur\\
-        & \footnotesize{Vani is an \textbf{extensible} platform made for the campus community consisting of Wiki, Forums,
-                Community search, Calendars etc.; built using \textbf{Drupal} under the mentorship of
-                \textbf{Professor Manindra Agarwal} and \textbf{Professor T. V. Prabhakar} } \\
-            \\
+                           & \footnotesize{Vani is an \textbf{extensible} platform
+                              made for the campus community consisting of Wiki, Forums,
+                              Community search, Calendars etc.; built using \textbf{Drupal}
+                              under the mentorship of \textbf{Professor Manindra Agarwal} and
+                              \textbf{Professor T. V. Prabhakar} } \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{May-July 2012} & GNU/Linux Exploration, Programming Club, IIT Kanpur\\
-        & \footnotesize{ The project involved exploration of various facets of \textbf{GNU/Linux} like the file system,
-            process management, memory management, shell interface et al.
-            It was essentially a theoretical run through GNU/Linux.
-            \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing} {Documentation} } \\
-            \\
+                           & \footnotesize{ The project involved exploration of various facets of
+                             \textbf{GNU/Linux} like the file system, process management,
+                             memory management, shell interface etc. And was
+                             undertaken under the aegis of \textbf{Programming Club, IIT Kanpur}
+                             \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing} 
+                             {Documentation} } \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{July 2013} & Projects on Github \\
                        & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems.
                           \href{https://github.com/srijanshetty/dotfiles} {Repo} } \\
@@ -292,7 +304,6 @@ Networks
                           \href{https://github.com/srijanshetty/oh-my-zsh} {Repo} } \\
                        & \footnotesize{\textbf{DS}: implementation of certain algorithms and data structures
                           \href{https://github.com/srijanshetty/DS} {Repo}} \\
-
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
