--- a/cv.tex
+++ b/cv.tex
@@ -76,7 +76,6 @@ Networks
 \section{Education}
 
 \begin{tabular}{rl}
-
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering},\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
                      & \normalsize \textsc{Gpa}: 9.6/10.0 \\
@@ -90,8 +89,6 @@ Networks
     \textsc{July} 2011 & 10th Board, \textsc{ICSE} Board,  \\
                        & \normalsize\textbf{The Laurels School International}, Indore \\
                        & \normalsize \textsc{Percentage}: 95.4 \\
-                       \\
-
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -108,25 +105,23 @@ Networks
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
-%   WORK EXPERIENCE
+%   SCHOLASTIC ACHIEVEMENTS
 %----------------------------------------------------------------------------------------
+\section{Scholastic Achievements}
 
-\section{Work Experience}
+\begin{tabular}{rp{12cm}}
 
-\begin{tabular}{r|p{11cm}}
-    \textsc{May-Jul 2014} & Research Intern at \textsc{Microsoft Research India}, Bangalore\emph{}\\
-                          & \footnotesize{The major objective of this project was to optimize
-                            \textbf{CScale for concurrency}. CScale provides a declarative programming model
-                            using LINQ, it does all the heavy lifting of scaling distributed systems and
-                            failure. The project also involved \textbf{failure testing and performance testing}
-                            of the concurrency optimizations in real world scenarios.}\\
-                            \\
-
-    \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks}, Bangalore\emph{}\\
-                          & \footnotesize{Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
-                            \textbf{Flash} based online media player of \textbf{CourseHub} - Aurus'
-                            propriety MOOC offering. A new \textbf{XMPP} chat service for group chat
-                            was also created and integrated with CourseHub.}\\
+    \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{Fall 2012}   & \textbf{Academic Mentor} for Y12 batch in \textbf{Fundamentals of Computer Science (ESC101)}. \\
+                         & \footnotesize{As an academic Mentor, I was entrusted with the responsibility of making sure
+                            that the students under me were able to keep pace with instructor and aid them in understanding
+                            the difficult concepts of the course. }\\
+    \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
+    \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
+    \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
+    \textsc{2005, 2009}  & Awarded overall best student in grades 6th and 9th for displaying all round excellence. \\
+    \textsc{2000 - 2009} & Recipient of scholastic excellence awards for exemplary academic performance throughout 2nd to 12th grade. \\
 
 \end{tabular}
 
@@ -137,14 +132,36 @@ Networks
 
 \begin{tabular}{rl}
 
-    \textsc{Programming Languages}: %
+    \textsc{Languages}: %
             & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
-    \textsc{Web Development}: %
+    \textsc{Web Dev}: %
             & \textbf{HTML5}, \textbf{CSS}, \textbf{JavaScript}, \textbf{Flash}, \textbf{SQL}\\
     \textsc{Tools}: %
             & \textbf{Git}, \textbf{Shell Scripting}, \textbf{Prezi}, \textbf{Vim}, \textbf{LaTeX}\\
-\\
 
+\end{tabular}
+
+%----------------------------------------------------------------------------------------
+%   WORK EXPERIENCE
+%----------------------------------------------------------------------------------------
+
+\section{Work Experience}
+
+\begin{tabular}{p{2.2cm}|p{11cm}}
+    \textsc{May-Jul 2014} & Research Intern at \textsc{Microsoft Research India}, Bangalore\emph{}\\
+                          & \footnotesize{The major objective of this project was to optimize
+                            \textbf{CScale for concurrency}. CScale provides a declarative programming model
+                            using LINQ, it does all the heavy lifting of scaling distributed systems and
+                            failure. The project also involved \textbf{failure testing and performance testing}
+                            of the concurrency optimizations in real world scenarios.}\\
+\end{tabular}
+
+\begin{tabular}{p{2.2cm}|p{11cm}}
+    \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks}, Bangalore\emph{}\\
+                          & \footnotesize{Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
+                            \textbf{Flash} based online media player of \textbf{CourseHub} - Aurus'
+                            propriety MOOC offering. A new \textbf{XMPP} chat service for group chat
+                            was also created and integrated with CourseHub.}\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -152,16 +169,16 @@ Networks
 %----------------------------------------------------------------------------------------
 \section{Course Projects}
 
-\begin{tabular}{r|p{11cm}}
-
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Spring 2014} & JavaScript to MIPS Compiler, \textsc{\raggedright Compilers} \\
                          & \footnotesize{An end-to-end compiler for a subset of ECMAScript5.1
                             which compiled to MIPS was implemented in Python. No runtime support
                             was provided ergo, static types and type annotations were used instead.
                             The project was undertaken in the aegis of \textbf{Professor Subhajit Roy}.
                             \href{https://github.com/srijanshetty/javascript-compiler} {Git Repo}} \\
-                            \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Spring 2014} & Hindi author attribution, \textsc{\raggedright Artificial Intelligence} \\
                          & \footnotesize{The first half of this project was a multi-class clustering problem,
                             wherein authors were to be clustered according to their writing style.
@@ -171,39 +188,45 @@ Networks
                             The project was supervised by \textbf{Professor Amitabha Mukherjee} and was
                             inherently difficult due to the unavailability of stemmers and POS taggers for Hindi.
                             \href{https://github.com/srijanshetty/author-attribution} {Git Repo}}\\
-                            \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2013} & NachOS, \textsc{Operating Systems} \\
                        & \footnotesize{The coursework included implementation of system calls; process
                           management and scheduling; memory management schemes and page replacement
                           algorithms in \textbf{NachOS}. \textbf{Professor Mainak Chaudhuri}, was
                           the professor-in-charge}\\
-                          \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2013} & P2P File Sharing and Streaming, \textsc{Computer Networks} \\
                        & \footnotesize{A Node.js based local file server and media playback server was implemented
                           to understand the underpinnings of Transport Layer Protocols, socket programming,
                           and P2P architecuture.  The project was supervised by \textbf{Professor Dheeraj Sanghi}.
                           \href{https://github.com/srijanshetty/nodesock} {Git Repo}}\\
-                          \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2013} & IP Spoofing, \textsc{Computer Networks} \\
                        & \footnotesize{Under the guidance of \textbf{Professor Dheeraj Sanghi}, different methodologies
                           of spoofing IP addresses and different uses of spoofing IPs were implemented and tested
                           in a secure environment.}\\
-                          \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2013} & Metro Travel Plan(Prolog), \textsc{Principles of Programming Languages} \\
                        & \footnotesize{Implementation of shortest paths in Prolog on the Delhi Metro route.
                           The professor-in-chare was \textbf{Professor P. Kurur}}\\
-                          \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2013} & Erlang Traffic Server, \textsc{Principles of Programming Languages} \\
                        & \footnotesize{A simple traffic server implemented in Erlang using message passing
                           concurrency and tail call recursion functional aspects of the language under the
                           guidance of \textbf{Professor P. Kurur}}\\
-                          \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Spring 2013} & 8-bit General Purpose Computer on a FPGA, \textsc{Computer Organization} \\
                          & \footnotesize{The GPC had a load-store architecture and was written in System Verilog and
                             implemented on a \textbf{Xilinx Spartan 3 FPGA}.  The project was under the
@@ -211,22 +234,23 @@ Networks
                             Instruction Set Architecture which could implement recursive functions, jumps,
                             loops  other basic building blocks of a simple assembly language.
                             \href{https://github.com/srijanshetty/220_y11} {Git Repo}} \\
-                            \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Spring 2013} & Conference Dates Web Crawler, \textsc{Computing Laboratory} \\
                          & \footnotesize{A python based web crawler which could obtain paper submission
                             deadlines of a provided conference name.  BeautifulSoup and urllib along
                             with simple pattern matching through regular expressions were used to implement crawling.
                             \href{https://github.com/srijanshetty/crawler} {Git Repo} } \\
-                            \\
+\end{tabular}
 
+\begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2011} & "No situation is unique and certain moral principles can be applied across all situation",
                          \textsc{Introduction to Philosophy} \\
                        & \footnotesize{ An argumentative discourse proving that certain moral principles
                          can be applied throughout; by proving different situations have a certain
                          fundamental similarity.  Albeit this would require a gross simplification of
                          different situations.  The reviewing instructor was \textbf{Professor Vineet Sahu}} \\
-
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -304,27 +328,6 @@ Networks
                           \href{https://github.com/srijanshetty/oh-my-zsh} {Repo} } \\
                        & \footnotesize{\textbf{DS}: implementation of certain algorithms and data structures
                           \href{https://github.com/srijanshetty/DS} {Repo}} \\
-\end{tabular}
-
-%----------------------------------------------------------------------------------------
-%   SCHOLASTIC ACHIEVEMENTS
-%----------------------------------------------------------------------------------------
-\section{Scholastic Achievements}
-
-\begin{tabular}{rp{12cm}}
-
-    \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{Fall 2012}   & \textbf{Academic Mentor} for Y12 batch in \textbf{Fundamentals of Computer Science (ESC101)}. \\
-                         & \footnotesize{As an academic Mentor, I was entrusted with the responsibility of making sure
-                            that the students under me were able to keep pace with instructor and aid them in understanding
-                            the difficult concepts of the course. }\\
-    \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
-    \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
-    \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
-    \textsc{2005, 2009}  & Awarded overall best student in grades 6th and 9th for displaying all round excellence. \\
-    \textsc{2000 - 2009} & Recipient of scholastic excellence awards for exemplary academic performance throughout 2nd to 12th grade. \\
-
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
