--- a/cv.tex
+++ b/cv.tex
@@ -67,8 +67,7 @@ I-308, IIT Kanpur {\large\textperiodcentered} Kanpur {\large\textperiodcentered}
 %----------------------------------------------------------------------------------------
 \section{Interests}
 
-Web Development, Natural Language Processing, Programming Languages, Distibuted Systems,
-Networks
+Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
