English Proficiency Programme

--- a/cv.tex
+++ b/cv.tex
@@ -67,7 +67,7 @@ I-308, IIT Kanpur {\large\textperiodcentered} Kanpur {\large\textperiodcentered}
 %----------------------------------------------------------------------------------------
 \section{Interests}
 
-Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
+Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -201,7 +201,7 @@ Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
     \textsc{Fall 2013} & P2P File Sharing and Streaming, \textsc{Computer Networks} \\
                        & \footnotesize{A Node.js based local file server and media playback server was implemented
                           to understand the underpinnings of Transport Layer Protocols, socket programming,
-                          and P2P architecuture.  The project was supervised by \textbf{Professor Dheeraj Sanghi}.
+                          and P2P architecture.  The project was supervised by \textbf{Professor Dheeraj Sanghi}.
                           \href{https://github.com/srijanshetty/nodesock} {Git Repo}}\\
 \end{tabular}
 
@@ -215,7 +215,7 @@ Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
 \begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{Fall 2013} & Metro Travel Plan(Prolog), \textsc{Principles of Programming Languages} \\
                        & \footnotesize{Implementation of shortest paths in Prolog on the Delhi Metro route.
-                          The professor-in-chare was \textbf{Professor P. Kurur}}\\
+                          The professor-in-charge was \textbf{Professor P. Kurur}}\\
 \end{tabular}
 
 \begin{tabular}{p{2.2cm}|p{11cm}}
@@ -259,10 +259,10 @@ Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
 
 \begin{tabular}{p{2.2cm}|p{11cm}}
     \textsc{July 2014} & OARS\\
-                       & \footnotesize{OARS is a \textbf{AngularJS} based frontend for the
+                       & \footnotesize{OARS is a \textbf{AngularJS} based front-end for the
                           courses offered in IIT Kanpur. It was created as a
-                          hack to allevate the pain of the students in using the
-                          sluggish leagacy course search. The data was obtained by
+                          hack to alleviate the pain of the students in using the
+                          sluggish legacy course search. The data was obtained by
                           scraping the official data portal of IIT Kanpur, and the
                           project is now maintained by \textbf{Navya}
                           \href{https://github.com/navya/oars} {Git Repo} }\\
@@ -313,7 +313,7 @@ Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
                              \textbf{GNU/Linux} like the file system, process management,
                              memory management, shell interface etc. And was
                              undertaken under the aegis of \textbf{Programming Club, IIT Kanpur}
-                             \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing} 
+                             \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
                              {Documentation} } \\
 \end{tabular}
 
@@ -336,31 +336,43 @@ Programming Languages, Distibuted Systems, Systems and Security, Web-Dev, NLP
 \section {Social, Leadership and Artistic Skills}
 \begin{tabular}{rp{12cm}}
 
-    -    & Volunteered to help \textbf{Professor Bhaskar Dasgupta} teach English to underprivileged children from the campus
-           and neighbouring village of Nankari.\\
+    2013-2014    & \textbf{Volunteer, English Proficiency Programme}\\
+                 & \footnotesize{English Proficiency Programme is the brainchild
+                    of \textbf{Professor Bhaskar Dasgupta}. The objective of the
+                    programme is to impart a functional knowledge of English to
+                    any interested student. I was a volunteer of the first leg
+                    of the programme which helped under-privileged students.}\\
+
     -    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}\\
          & \footnotesize{Navya is the Free and Open Source Software Group at IIT
            Kanpur which educates the campus community about the FOSS mission and
            hacks on FOSS applications which would be of use to the students
            community \href{https://github.com/navya} {Github Repo}} \\
+
     2014 & \textbf{Head, Major Events and Competitions, Antaragni'14} , the annual cultural festival of
     IIT Kanpur. \\
+
     2013 & \textbf{Hospitality Coordinator, Antaragni ‘13}\\
          & \footnotesize{As a Hospitality Coordinator, I was oversaw a team of 150 students responsible for
             the hospitality of the 1500 students who visit the campus for Antaragni, the annual cultural festival
             of IIT Kanpur which takes place in October every year.}\\
+
     2013 & \textbf{Editor-in-chief, Vox Populi}, the campus newsletter. \\
          & \footnotesize{Vox Populi is the campus newsletter of IIT Kanpur with a reach of more than 6000 students.
             As, the Editor-in-chief, I was responsible for ensuring impeccable quality of content in the newsletter and
             logistics of publishing the bi-monthly newsletter.}\\
+
     2012 & \textbf{Member Gymkhana Review Committee}\\
          & \footnotesize{The Gymkhana Review Committee was set up with the vision of revamping the Student's Gymkhana
             of IIT Kanpur, which is the body responsible for all extra curricular activities of the campus. As a
             member of the Gymkhana Review Committee, I chaired the sessions on \textbf{Extended Orientation of
             incoming freshmen students}, as a member of the committee, I gave valuable inputs to other academic,
             senate and activities reforms introduced by the committee.}\\
-    2012 & \textbf{Elected Senator Students' Gymkhana} IITK Y11 batch. \\
+
+    2012 & \textbf{Senator, Students' Senate}, IITK Y11 batch. \\
+
     2012 & \textbf{Secretary, English Literary Society}. \\
+
     2010 & A year of schooling in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad). \\
     -   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
